--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,16 +1,20 @@
 apply plugin: 'com.android.library'
 
-android {
-    def DEFAULT_COMPILE_SDK_VERSION             = 27
-    def DEFAULT_BUILD_TOOLS_VERSION             = "27.0.3"
-    def DEFAULT_TARGET_SDK_VERSION              = 27
+def safeExtGet(prop, fallback) {
+    rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
+}
 
-    compileSdkVersion project.hasProperty('compileSdkVersion') ? project.compileSdkVersion : DEFAULT_COMPILE_SDK_VERSION
-    buildToolsVersion project.hasProperty('buildToolsVersion') ? project.buildToolsVersion : DEFAULT_BUILD_TOOLS_VERSION
+android {
+    def DEFAULT_COMPILE_SDK_VERSION             = 28
+    def DEFAULT_BUILD_TOOLS_VERSION             = "28.0.3"
+    def DEFAULT_TARGET_SDK_VERSION              = 28
+
+    compileSdkVersion safeExtGet('compileSdkVersion', DEFAULT_COMPILE_SDK_VERSION)
+    buildToolsVersion safeExtGet('buildToolsVersion', DEFAULT_BUILD_TOOLS_VERSION)
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion project.hasProperty('compileSdkVersion') ? project.compileSdkVersion : DEFAULT_TARGET_SDK_VERSION
+        targetSdkVersion safeExtGet('targetSdkVersion', DEFAULT_TARGET_SDK_VERSION)
         versionCode 3
         versionName "2.0.0"
         ndk {
@@ -23,7 +27,7 @@ android {
 }
 
 dependencies {
-    def supportLibVersion = project.hasProperty('supportLibVersion') ? project.supportLibVersion : "+"
+    def supportLibVersion = safeExtGet('supportLibVersion', '+')
     implementation 'com.facebook.react:react-native:+'
     implementation "com.android.support:support-v4:$supportLibVersion"
 }
